# restaurant-search-llm-agent

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
app/demo/: chat.py  config.py  demo.py  session.py  ui_components.py  utils.py
app/evaluation/retriever/: create_evaluation_queries.py  evaluate_retriever.py  evaluation_queries.jsonl  evaluation_result.md  retrieved_docs.md
app/generation/: generation.py
app/llm/: llm.py
app/retrieve/: elasticsearch.py  embeddings.py  hybrid_search.py  nlu.py  query_rewrite.py  relevance.py  search.py  structure_query.py  web_search.py
app/scripts/: create_documents.py  extract_embeddings.py  extract_features.py  index_coordinates.py  index_documents_es.py  parse_district_info.py  parse_station_info.py
crawl/: crawl_restaurant_data.py  food_keywords.txt  load_restaurants.py  locations.txt  naver_search_api.md
docker-elk/: docker-compose.yml
docker-elk/elasticsearch/: Dockerfile
docker-elk/elasticsearch/config/analysis/: category_synonyms.txt  synonyms.txt  user_dictionary.txt
docker-elk/kibana/: Dockerfile
docker-elk/kibana/config/: kibana.yml
finetuning/: create_feature_extraction_instruction_dataset.py  test_feature_extractor.py  train_feature_extractor.py
