[project]
name = "restaurant-search-llm-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "beautifulsoup4>=4.12.3",
    "webdriver-manager>=4.0.1",
]
