[project]
name = "restaurant-search-llm-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "beautifulsoup4>=4.12.3",
    "webdriver-manager>=4.0.1",
    "google-genai>=1.28.0",
    "numpy>=2.3.2",
    "elasticsearch>=9.1.0",
    "tavily-python>=0.7.10",
    "gradio>=5.39.0",
    "tqdm>=4.67.1",
    "openai>=1.99.6",
    "transformers>=4.55.0",
    "accelerate>=1.10.0",
    "peft>=0.17.0",
    "datasets>=4.0.0",
    "trl>=0.21.0",
    "torch>=2.8.0",
    "wandb>=0.21.1",
    "evaluate>=0.4.5",
]
